--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ markdown-it-py==2.2.0
 MarkupSafe==2.1.5
 matplotlib==3.5.3
 mdurl==0.1.2
-numpy==1.21.6
+numpy>=1.26.4
 packaging==23.2
 pandas==1.3.5
 Pillow==9.5.0
